# mcp-linkedin

./: .gitignore  Dockerfile  README.md  pyproject.toml  smithery.yaml
src/mcp_linkedin/: client.py
