[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-linkedin"
version = "0.1.1"
description = "MCP server to interact with LinkedIn"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "linkedin-api",
    "fastmcp",
    "requests",
    "uvicorn",
]
authors = [
    { name = "Adhika Setya Pramudita", email = "adhika.setya.p@gmail.com" }
]

[project.urls]
Homepage = "https://github.com/adhikasp/mcp-linkedin"

[project.scripts]
mcp-linkedin = "mcp_linkedin.client:mcp.run"